--- a/lesson_16_revision.html
+++ b/lesson_16_revision.html
@@ -716,7 +716,7 @@
             ><span class="brand-learning">Learning</span>
           </div>
         </div>
-        <h1 class="quiz-title">🎯 Lesson 16 Quiz</h1>
+        <h1 class="quiz-title">🎯 Lesson 16 Revision Quiz</h1>
         <p class="quiz-subtitle">Funtions-I</p>
       </div>
 
@@ -732,193 +732,187 @@
       </div>
 
       <div class="content">
-        <form id="quizForm">
+ <form id="quizForm">
 
-  <!-- Question 1 (VERY EASY – Basics) -->
+  <!-- Question 1 (VERY EASY – Understanding Function Parts) -->
   <div class="question-block">
     <div class="question-number">1</div>
-    <div class="question-text">🟢 What is a function in Python?</div>
+    <div class="question-text">🟢 Which part of a function receives input values?</div>
 
     <div class="options">
       <div class="option">
         <input type="radio" name="q1" value="A">
-        <label>A variable that stores data</label>
+        <label>Function name</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q1" value="B">
-        <label>A reusable block of code that does a task</label>
+        <label>Parameters</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q1" value="C">
-        <label>A loop that runs many times</label>
+        <label>Return statement</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q1" value="D">
-        <label>A comment in the program</label>
+        <label>Indentation</label>
       </div>
     </div>
   </div>
 
-  <!-- Question 2 (EASY – Function Creation) -->
+  <!-- Question 2 (EASY – Function Call) -->
   <div class="question-block">
     <div class="question-number">2</div>
-    <div class="question-text">🟢 Which keyword is used to create a function in Python?</div>
+    <div class="question-text">🟢 Which line is used to CALL a function?</div>
 
     <div class="options">
       <div class="option">
         <input type="radio" name="q2" value="A">
-        <label>make</label>
+        <label>def greet():</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q2" value="B">
-        <label>function</label>
+        <label>greet()</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q2" value="C">
-        <label>def</label>
+        <label>print("Hello")</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q2" value="D">
-        <label>create</label>
+        <label>return greet</label>
       </div>
     </div>
   </div>
 
-  <!-- Question 3 (EASY – Function Call) -->
+  <!-- Question 3 (EASY – Parameters Count) -->
   <div class="question-block">
     <div class="question-number">3</div>
-    <div class="question-text">🟡 What will be printed?</div>
+    <div class="question-text">🟡 How many parameters does this function have?</div>
 
     <div class="code-box">
       <pre>
-def greet():
-    print("Hello")
-
-greet()
+def calculate(a, b, c):
+    return a + b + c
       </pre>
     </div>
 
     <div class="options">
       <div class="option">
         <input type="radio" name="q3" value="A">
-        <label>greet</label>
+        <label>1</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q3" value="B">
-        <label>Hello</label>
+        <label>2</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q3" value="C">
-        <label>Nothing will be printed</label>
+        <label>3</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q3" value="D">
-        <label>Error</label>
+        <label>0</label>
       </div>
     </div>
   </div>
 
-  <!-- Question 4 (MEDIUM – Parameters) -->
+  <!-- Question 4 (MEDIUM – Return Value Usage) -->
   <div class="question-block">
     <div class="question-number">4</div>
     <div class="question-text">🟠 What will be printed?</div>
 
     <div class="code-box">
       <pre>
-def add(a, b):
-    print(a + b)
+def get_number():
+    return 5
 
-add(3, 4)
+print(get_number() + 2)
       </pre>
     </div>
 
     <div class="options">
       <div class="option">
         <input type="radio" name="q4" value="A">
-        <label>3</label>
+        <label>5</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q4" value="B">
-        <label>4</label>
-      </div>
-
-      <div class="option">
-        <input type="radio" name="q4" value="C">
         <label>7</label>
       </div>
 
       <div class="option">
+        <input type="radio" name="q4" value="C">
+        <label>None</label>
+      </div>
+
+      <div class="option">
         <input type="radio" name="q4" value="D">
-        <label>a + b</label>
+        <label>Error</label>
       </div>
     </div>
   </div>
 
-  <!-- Question 5 (MEDIUM – return vs print) -->
+  <!-- Question 5 (MEDIUM – Print inside Function) -->
   <div class="question-block">
     <div class="question-number">5</div>
     <div class="question-text">🔴 What will be printed?</div>
 
     <div class="code-box">
       <pre>
-def add(a, b):
+def show_sum(a, b):
     print(a + b)
 
-result = add(2, 3)
-print(result)
+show_sum(4, 6)
       </pre>
     </div>
 
     <div class="options">
       <div class="option">
         <input type="radio" name="q5" value="A">
-        <label>5</label>
+        <label>4</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q5" value="B">
-        <label>5<br>None</label>
+        <label>6</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q5" value="C">
-        <label>None</label>
+        <label>10</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q5" value="D">
-        <label>Error</label>
+        <label>None</label>
       </div>
     </div>
   </div>
 
-  <!-- Question 6 (HARD – Tricky return vs print + modular) -->
+  <!-- Question 6 (HARD – Modular Functions) -->
   <div class="question-block">
     <div class="question-number">6</div>
     <div class="question-text">🔥 What will be printed?</div>
 
     <div class="code-box">
       <pre>
-def double(num):
-    return num * 2
+def increment(x):
+    return x + 1
 
-def show(value):
-    print(value)
+def process(n):
+    return increment(n) * 2
 
-x = double(3)
-y = show(x)
-
-print(y)
+print(process(3))
       </pre>
     </div>
 
@@ -930,12 +924,12 @@ print(y)
 
       <div class="option">
         <input type="radio" name="q6" value="B">
-        <label>6<br/>None</label>
+        <label>7</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q6" value="C">
-        <label>3</label>
+        <label>8</label>
       </div>
 
       <div class="option">
@@ -952,6 +946,7 @@ print(y)
 </form>
 
 
+
         <div class="result" id="result">
           <div class="result-emoji" id="resultEmoji">🎉</div>
           <div class="score-message" id="scoreMessage"></div>
@@ -964,11 +959,11 @@ print(y)
     <script>
     const correctAnswers = {
   q1: "B",
-    q2: "C",
-    q3: "B",
-    q4: "C",
-    q5: "B",
-    q6: "B"
+  q2: "C",
+  q3: "B",
+  q4: "C",
+  q5: "B",
+  q6: "C"
 
 };
 
