--- a/lesson_17_revision.html
+++ b/lesson_17_revision.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>STEMxLearning - Lesson 16 Quiz</title>
+    <title>STEMxLearning - Lesson 17 Quiz</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Poppins:wght@400;600;700&display=swap");
 
@@ -716,8 +716,8 @@
             ><span class="brand-learning">Learning</span>
           </div>
         </div>
-        <h1 class="quiz-title">🎯 Lesson 16 Quiz</h1>
-        <p class="quiz-subtitle">Funtions-I</p>
+        <h1 class="quiz-title">🎯 Lesson 17 Revision Quiz</h1>
+        <p class="quiz-subtitle">Funtions-II</p>
       </div>
 
       <div class="timer-section">
@@ -732,215 +732,214 @@
       </div>
 
       <div class="content">
-        <form id="quizForm">
+    <form id="quizForm">
 
-  <!-- Question 1 (VERY EASY – Basics) -->
+  <!-- Question 1 (VERY EASY – Theory) -->
   <div class="question-block">
     <div class="question-number">1</div>
-    <div class="question-text">🟢 What is a function in Python?</div>
+    <div class="question-text">🟢 Which of the following best describes a global variable?</div>
 
     <div class="options">
       <div class="option">
         <input type="radio" name="q1" value="A">
-        <label>A variable that stores data</label>
+        <label>A variable created inside a loop</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q1" value="B">
-        <label>A reusable block of code that does a task</label>
+        <label>A variable created inside a function</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q1" value="C">
-        <label>A loop that runs many times</label>
+        <label>A variable created outside all functions</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q1" value="D">
-        <label>A comment in the program</label>
+        <label>A variable created using lambda</label>
       </div>
     </div>
   </div>
 
-  <!-- Question 2 (EASY – Function Creation) -->
+  <!-- Question 2 (BASIC – Local Variable Concept) -->
   <div class="question-block">
     <div class="question-number">2</div>
-    <div class="question-text">🟢 Which keyword is used to create a function in Python?</div>
-
-    <div class="options">
-      <div class="option">
-        <input type="radio" name="q2" value="A">
-        <label>make</label>
-      </div>
-
-      <div class="option">
-        <input type="radio" name="q2" value="B">
-        <label>function</label>
-      </div>
-
-      <div class="option">
-        <input type="radio" name="q2" value="C">
-        <label>def</label>
-      </div>
-
-      <div class="option">
-        <input type="radio" name="q2" value="D">
-        <label>create</label>
-      </div>
-    </div>
-  </div>
-
-  <!-- Question 3 (EASY – Function Call) -->
-  <div class="question-block">
-    <div class="question-number">3</div>
-    <div class="question-text">🟡 What will be printed?</div>
+    <div class="question-text">🟢 What will be printed?</div>
 
     <div class="code-box">
       <pre>
-def greet():
-    print("Hello")
+num = 5
 
-greet()
+def change():
+    num = 10
+    print(num)
+
+change()
       </pre>
     </div>
 
     <div class="options">
       <div class="option">
-        <input type="radio" name="q3" value="A">
-        <label>greet</label>
+        <input type="radio" name="q2" value="A">
+        <label>5</label>
       </div>
 
       <div class="option">
-        <input type="radio" name="q3" value="B">
-        <label>Hello</label>
+        <input type="radio" name="q2" value="B">
+        <label>10</label>
       </div>
 
       <div class="option">
-        <input type="radio" name="q3" value="C">
-        <label>Nothing will be printed</label>
-      </div>
-
-      <div class="option">
-        <input type="radio" name="q3" value="D">
+        <input type="radio" name="q2" value="C">
         <label>Error</label>
+      </div>
+
+      <div class="option">
+        <input type="radio" name="q2" value="D">
+        <label>None</label>
       </div>
     </div>
   </div>
 
-  <!-- Question 4 (MEDIUM – Parameters) -->
+  <!-- Question 3 (MEDIUM – Theory: global keyword) -->
+  <div class="question-block">
+    <div class="question-number">3</div>
+    <div class="question-text">🟡 When do we need to use the <code>global</code> keyword inside a function?</div>
+
+    <div class="options">
+      <div class="option">
+        <input type="radio" name="q3" value="A">
+        <label>When reading a global variable</label>
+      </div>
+
+      <div class="option">
+        <input type="radio" name="q3" value="B">
+        <label>When printing a global variable</label>
+      </div>
+
+      <div class="option">
+        <input type="radio" name="q3" value="C">
+        <label>When changing a global variable</label>
+      </div>
+
+      <div class="option">
+        <input type="radio" name="q3" value="D">
+        <label>When creating a local variable</label>
+      </div>
+    </div>
+  </div>
+
+  <!-- Question 4 (MEDIUM – Code: global update) -->
   <div class="question-block">
     <div class="question-number">4</div>
     <div class="question-text">🟠 What will be printed?</div>
 
     <div class="code-box">
       <pre>
-def add(a, b):
-    print(a + b)
+x = 10
 
-add(3, 4)
+def update():
+    global x
+    x = x + 5
+
+update()
+print(x)
       </pre>
     </div>
 
     <div class="options">
       <div class="option">
         <input type="radio" name="q4" value="A">
-        <label>3</label>
+        <label>10</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q4" value="B">
-        <label>4</label>
-      </div>
-
-      <div class="option">
-        <input type="radio" name="q4" value="C">
-        <label>7</label>
-      </div>
-
-      <div class="option">
-        <input type="radio" name="q4" value="D">
-        <label>a + b</label>
-      </div>
-    </div>
-  </div>
-
-  <!-- Question 5 (MEDIUM – return vs print) -->
-  <div class="question-block">
-    <div class="question-number">5</div>
-    <div class="question-text">🔴 What will be printed?</div>
-
-    <div class="code-box">
-      <pre>
-def add(a, b):
-    print(a + b)
-
-result = add(2, 3)
-print(result)
-      </pre>
-    </div>
-
-    <div class="options">
-      <div class="option">
-        <input type="radio" name="q5" value="A">
         <label>5</label>
       </div>
 
       <div class="option">
-        <input type="radio" name="q5" value="B">
-        <label>5<br>None</label>
+        <input type="radio" name="q4" value="C">
+        <label>15</label>
       </div>
 
       <div class="option">
-        <input type="radio" name="q5" value="C">
-        <label>None</label>
-      </div>
-
-      <div class="option">
-        <input type="radio" name="q5" value="D">
+        <input type="radio" name="q4" value="D">
         <label>Error</label>
       </div>
     </div>
   </div>
 
-  <!-- Question 6 (HARD – Tricky return vs print + modular) -->
+  <!-- Question 5 (BASIC – Lambda Syntax) -->
+  <div class="question-block">
+    <div class="question-number">5</div>
+    <div class="question-text">🔴 Which of the following shows the correct syntax of a lambda function?</div>
+
+    <div class="options">
+      <div class="option">
+        <input type="radio" name="q5" value="A">
+        <label>lambda x = x + 1</label>
+      </div>
+
+      <div class="option">
+        <input type="radio" name="q5" value="B">
+        <label>lambda(x): x + 1</label>
+      </div>
+
+      <div class="option">
+        <input type="radio" name="q5" value="C">
+        <label>lambda x: x + 1</label>
+      </div>
+
+      <div class="option">
+        <input type="radio" name="q5" value="D">
+        <label>def lambda x: x + 1</label>
+      </div>
+    </div>
+  </div>
+
+  <!-- Question 6 (HARD & TRICKY – Global vs Local) -->
   <div class="question-block">
     <div class="question-number">6</div>
     <div class="question-text">🔥 What will be printed?</div>
 
     <div class="code-box">
       <pre>
-def double(num):
-    return num * 2
+points = 5
 
-def show(value):
-    print(value)
+def update():
+    points = 10
+    return points
 
-x = double(3)
-y = show(x)
+def show():
+    global points
+    points = update()
 
-print(y)
+show()
+print(points)
       </pre>
     </div>
 
     <div class="options">
       <div class="option">
         <input type="radio" name="q6" value="A">
-        <label>6</label>
+        <label>5</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q6" value="B">
-        <label>6<br/>None</label>
+        <label>10</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q6" value="C">
-        <label>3</label>
+        <label>Error</label>
       </div>
 
       <div class="option">
         <input type="radio" name="q6" value="D">
-        <label>Error</label>
+        <label>None</label>
       </div>
     </div>
   </div>
@@ -950,6 +949,8 @@ print(y)
   </button>
 
 </form>
+
+
 
 
         <div class="result" id="result">
@@ -963,11 +964,11 @@ print(y)
 
     <script>
     const correctAnswers = {
-  q1: "B",
-    q2: "C",
-    q3: "B",
+    q1: "C",
+    q2: "B",
+    q3: "C",
     q4: "C",
-    q5: "B",
+    q5: "C",
     q6: "B"
 
 };
