--- a/lesson_16_revision.html
+++ b/lesson_16_revision.html
@@ -780,7 +780,7 @@
 
       <div class="option">
         <input type="radio" name="q2" value="C">
-        <label>print("Hello")</label>
+        <label>fuction call</label>
       </div>
 
       <div class="option">
@@ -958,12 +958,12 @@ print(process(3))
 
     <script>
     const correctAnswers = {
-  q1: "B",
-  q2: "C",
-  q3: "B",
-  q4: "C",
-  q5: "B",
-  q6: "C"
+ q1: "B",
+    q2: "B",
+    q3: "C",
+    q4: "B",
+    q5: "C",
+    q6: "C",
 
 };
 
