--- a/lesson_18.html
+++ b/lesson_18.html
@@ -815,17 +815,18 @@ greet(2)
 def print_numbers(n):
     if n == 0:
         return
-    print(n)
+    print(n, end=" ")
     print_numbers(n - 1)
 
 print_numbers(3)
+
       </pre>
     </div>
 
     <div class="options">
       <div class="option">
         <input type="radio" name="q3" value="A">
-        <label>1 2 3</label>
+        <label>3<br/> 2 <br/>1</label>
       </div>
 
       <div class="option">
